# Twixt-backend

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20230803100448_init.up.sql  20230803180332_Add_twixts.down.sql  20230803180332_Add_twixts.up.sql  20230807184900_Add_twixts.down.sql  20230807184900_Add_twixts.up.sql  20230807185455_Add_user_actions.down.sql  20230807185455_Add_user_actions.up.sql
migrations/old/: 20230803180332_Add_twixts.down.sql  20230807134935_Added_following.down.sql  20230807134935_Added_following.up.sql  20230807184631_Add_muted_users.down.sql  20230807184631_Add_muted_users.up.sql
src/: config.rs  jwt_auth.rs  main.rs  prelude.rs  utils.rs
src/graphql/: dataloader.rs  handlers.rs  mod.rs  post.rs  query.rs  user.rs
src/handlers/: auth.rs  file.rs  health.rs  mod.rs  posts.rs
src/model/: auth.rs  error.rs  mod.rs  post.rs  state.rs
