[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
anyhow = "1.0.72"
argon2 = "0.5.1"
async-graphql = { version = "6.0.1", features = ["dataloader"] }
async-graphql-actix-web = "6.0.1"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
mime = "0.3.17"
rand = "0.8.5"
serde = "1.0.180"
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
tokio = "1.29.1"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
